--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -25,10 +25,10 @@
                     <audio src="ichi.mp3" controls></audio>
                     <h3>私のおすすめ和菓子アンケートフォーム</h3>
                     <form>
-                        <rabel>氏名</rabel>
+                        <label>氏名</label>
                         <input type="text" placeholder="名前を入力してください">
                         <br>
-                        <rabel>年代</rabel>
+                        <label>年代</label>
                         <select>
                             <option>10代以下</option>
                             <option>20代</option>
@@ -36,11 +36,11 @@
                             <option>40代以上</option>
                         </select>
                         <br>
-                        <rabel>男性</rabel><input type="radio" name="gender">
-                        <rabel>女性</rabel><input type="radio" name="gender">
-                        <rabel>その他</rabel><input type="radio" name="gender">
+                        <label>男性</label><input type="radio" name="gender">
+                        <label>女性</label><input type="radio" name="gender">
+                        <label>その他</label><input type="radio" name="gender">
                         <br>
-                        <rabel>おすすめ和菓子の名称</rabel>
+                        <label>おすすめ和菓子の名称</label>
                         <input type="text" placeholder="例：みたらし団子">
                         <br>
                         <label>おすすめする理由</label>
@@ -65,4 +65,5 @@
         <footer>
             <p>&copy; SAMURAIニュース</p>
         </footer>
+    </body>
 </html>
